--- a/ex007/index.html
+++ b/ex007/index.html
@@ -25,7 +25,7 @@
             <div id="texto">
                 <h2>Projeto Tal</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis itaque at laborum accusamus odit odio repudiandae aliquid blanditiis facere minima illo distinctio magni ipsa impedit deleniti, harum quisquam fugiat! Officia.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At repellendus voluptatem non officia consequatur vero ipsum mollitia reiciendis et harum ea dolores veritatis, culpa error, nulla quibusdam tempore ad? Sapiente? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus aperiam quisquam laboriosam distinctio tenetur, eos rem similique nisi, accusantium tempore consectetur odio accusamus odit reprehenderit!</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At repellendus voluptatem non officia consequatur vero ipsum mollitia reiciendis et harum ea dolores veritatis, culpa error, nulla quibusdam tempore ad? Sapiente? Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                 <p>10/10/2010</p>
             </div>
 
