--- a/ex007/index.html
+++ b/ex007/index.html
@@ -26,7 +26,7 @@
                 <h2>Projeto Tal</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis itaque at laborum accusamus odit odio repudiandae aliquid blanditiis facere minima illo distinctio magni ipsa impedit deleniti, harum quisquam fugiat! Officia.</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At repellendus voluptatem non officia consequatur vero ipsum mollitia reiciendis et harum ea dolores veritatis, culpa error, nulla quibusdam tempore ad? Sapiente? Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                <p>10/10/2010</p>
+                <p>10/10/2010 Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit hic natus repellendus vitae quo quibusdam voluptas aut, cumque consequatur nesciunt doloremque error iure nam inventore dolorum sit, accusantium dolore iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
             </div>
 
             <div id="links">
