--- a/ex007/index.html
+++ b/ex007/index.html
@@ -25,16 +25,18 @@
             <div id="texto">
                 <h2>Projeto Tal</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis itaque at laborum accusamus odit odio repudiandae aliquid blanditiis facere minima illo distinctio magni ipsa impedit deleniti, harum quisquam fugiat! Officia.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At repellendus voluptatem non officia consequatur vero ipsum mollitia reiciendis et harum ea dolores veritatis, culpa error, nulla quibusdam tempore ad? Sapiente? Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                <p>10/10/2010 Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit hic natus repellendus vitae quo quibusdam voluptas aut, cumque consequatur nesciunt doloremque error iure nam inventore dolorum sit, accusantium dolore iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At repellendus voluptatem non officia consequatur vero ipsum mollitia reiciendis et harum ea dolores veritatis, culpa error, nulla quibusdam tempore ad? Sapiente? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis non corporis voluptas repellendus tenetur fugiat amet quaerat, beatae porro! Ea. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo possimus aliquam placeat suscipit architecto, dicta blanditiis voluptatum voluptatibus reiciendis aspernatur necessitatibus repellendus eligendi debitis fuga, dolorem consequatur maxime, accusamus tempore quis reprehenderit ut atque! Nemo sit aspernatur maiores ea repellendus sint natus officiis perferendis. Doloremque deleniti nam delectus voluptatibus modi quae tenetur inventore! Eum amet laborum, numquam esse eaque ratione nam, ex deserunt doloremque quas hic similique minima nemo! Tempore aperiam assumenda est placeat. Consequatur dolorem mollitia eveniet in, dolorum, ipsam praesentium placeat, magnam obcaecati quidem nobis? Nemo voluptates maiores fuga quae magnam voluptatem et at natus repudiandae! Amet, aliquid! </p>
+                <p>10/10/2010 </p>
+
+                <div id="links">
+                    <ul>
+                        <li><a href="#">Projeto</a></li>
+                        <li><a href="#">Codigo</a></li>
+                    </ul>
+                </div>
             </div>
 
-            <div id="links">
-                <ul>
-                    <li><a href="#">Projeto</a></li>
-                    <li><a href="#">Codigo</a></li>
-                </ul>
-            </div>
+           
         </div>
 
     </div>
