--- a/ex007/index.html
+++ b/ex007/index.html
@@ -16,8 +16,8 @@
 
         <div class="internaModal">
 
-            <div id="fechar">
-                <span>&times;</span>
+            <div class="fechar">
+                <span id="btnFechar">&times;</span>
             </div>
 
             <div id="video">
@@ -31,8 +31,8 @@
 
                 <div id="links">
                     <ul>
-                        <li><a href="#">Projeto</a></li>
-                        <li><a href="#">Codigo</a></li>
+                        <li><a href="https://rafael-biavati.github.io/Estudo-Flexbox/projeto-flexbox/" target="_blank">Projeto</a></li>
+                        <li><a href="https://github.com/Rafael-Biavati/Estudo-Flexbox/tree/main/projeto-flexbox" target="_blank">Codigo</a></li>
                     </ul>
                 </div>
             </div>
@@ -43,6 +43,6 @@
     </div>
 
 
-    <script src="script.css"></script>
+    <script src="script.js"></script>
 </body>
 </html>
