--- a/ex007/index.html
+++ b/ex007/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     
-    <a href="#" onclick="abrirModal()">Abrir Modal</a>
+    <a href="#" id="projeto1">Abrir Projeto 1</a> <br>
+    <a href="#" id="projeto2">Abrir Projeto 2</a>
 
     <div id="meuModal" class="baseModal">
 
@@ -21,18 +22,18 @@
             </div>
 
             <div id="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/-yGHG3pnHLg?si=YtljJKvCbVlFFo9M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+               
             </div>
 
             <div id="texto">
-                <h2>Projeto Hotel</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis itaque at laborum accusamus odit odio repudiandae aliquid blanditiis facere minima illo distinctio magni ipsa impedit deleniti, harum quisquam fugiat! Officia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, explicabo corrupti illo, eveniet fuga totam officia hic iste recusandae dolores, modi minima repellat delectus? Impedit, nobis? Eveniet exercitationem sint animi.</p>
-                <p>10/10/2010</p>
+                <h2 id="titulo">Projeto Hotel</h2>
+                <p id="descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis itaque at laborum accusamus odit odio repudiandae aliquid blanditiis facere minima illo distinctio magni ipsa impedit deleniti, harum quisquam fugiat! Officia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, explicabo corrupti illo, eveniet fuga totam officia hic iste recusandae dolores, modi minima repellat delectus? Impedit, nobis? Eveniet exercitationem sint animi.</p>
+                <p id="data">10/10/2010</p>
 
                 <div id="links">
                     <ul>
-                        <li><a href="https://rafael-biavati.github.io/Estudo-Flexbox/projeto-flexbox/" target="_blank">Projeto</a></li>
-                        <li><a href="https://github.com/Rafael-Biavati/Estudo-Flexbox/tree/main/projeto-flexbox" target="_blank">Codigo</a></li>
+                        <li><a id="linkProjeto" href="https://rafael-biavati.github.io/Estudo-Flexbox/projeto-flexbox/" target="_blank">Projeto</a></li>
+                        <li><a id="linkCodigo" href="https://github.com/Rafael-Biavati/Estudo-Flexbox/tree/main/projeto-flexbox" target="_blank">Codigo</a></li>
                     </ul>
                 </div>
             </div>
