--- a/ex007/index.html
+++ b/ex007/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylePag.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
 </head>
 <body>
     
-    <a href="#" id="projeto1">Abrir Projeto 1</a> <br>
-    <a href="#" id="projeto2">Abrir Projeto 2</a>
+    <nav>
+        <a href="#" id="projeto1">Projeto 1</a> 
+        <a href="#" id="projeto2">Projeto 2</a>
+    </nav>
 
     <div id="meuModal" class="baseModal">
 
