--- a/ex008/index.html
+++ b/ex008/index.html
@@ -11,8 +11,8 @@
     </style>
 </head>
 <body>
-    <h1>JavaScript</h1>
-    <p id="texto"></p>
+    <h1>Objetos</h1>
+ 
 
 
     <script src="js/script.js"></script>
