--- a/ex010/index.html
+++ b/ex010/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>JavaScript</h1>
+    <p id="teste"></p>
 
 
     <script src="js/script.js"></script>
