--- a/ex011/index.html
+++ b/ex011/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            text-align: center;
+        }
+        .start{
+            width: 250px;
+            height: 150px;
+            border: none;
+            background-color: lightcoral;
+            font-size: 1.2em;
+            margin: 10px;
+            cursor: pointer;
+        }
+        .stop{
+            width: 250px;
+            height: 150px;
+            border: none;
+            background-color: lightgreen;
+            font-size: 1.2em;
+            margin: 10px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-    
-
+  <h1>Controle de Tempo</h1>
+  <h2 id="tempo">0</h2>
+  <button class="start" onclick="ativarContagem()">Ativar Contagem</button>
+  <button class="stop" onclick="pararContagem()">Parar Contagem</button>
 
     <script src="js/script.js"></script>
 </body>
