--- a/ex014/index.html
+++ b/ex014/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>JSON</h1>
+    <pre id="area"></pre>
 
     <script src="script.js"></script>
 </body>
