--- a/ListaTarefas/index.html
+++ b/ListaTarefas/index.html
@@ -11,8 +11,8 @@
 <body>
     <h1>Lista de Tarefas</h1>
     <header>
-        <input type="text" name="tarefaTxt" id="tarefaTxt" placeholder="Digite Sua Tarefa">
-        <input id="btn-add" onclick="addTarefa()" class="add" type="button" value="Adicionar" >
+            <input type="text" name="tarefaTxt" id="tarefaTxt" placeholder="Adicionar Tarefa...">
+            <input id="btn-add" onclick="addTarefa()" class="add" type="button" value="Adicionar" >
     </header>
     <main id="areaLista">
       
